--- a/src/js/dashboard-v2/charts/common/chart.scss
+++ b/src/js/dashboard-v2/charts/common/chart.scss
@@ -23,19 +23,33 @@
         g.fg-line path {
             fill:none; stroke:#555555; stroke-width: 2.0px;
         }
+        g.pending-block {
+            fill:black; opacity:0.1;
+            text { font-weight:300; font-size: 0.8rem; color:black;  }
+            text {  text-anchor: end; dominant-baseline:auto; }
+        }
         g.date-axis {
             line { stroke-width: 0.5px; stroke:black;}
-            text { font-weight:300; font-size: 0.8rem; color:black; text-anchor: middle; dominant-baseline:hanging;}
+            text { font-weight:300; font-size: 0.8rem; color:black;  }
+            text { text-anchor: middle; dominant-baseline:hanging;}
+            text.x-axis-legend { font-weight:300; text-anchor:end; dominant-baseline:auto;  }
         }
         g.left-y-axis {
             line { stroke-width: 0.5px; stroke:black; opacity:0.5;}
-            text { font-weight:300; font-size: 1.0rem; color:black; text-anchor: end; dominant-baseline:middle;}
+            text { font-weight:400; font-size: 0.9rem; color:black;  } 
+            text { text-anchor: end; dominant-baseline:middle;}
+            text.left-y-axis-legend { text-anchor:start; dominant-baseline:hanging;  }
         }
         g.right-y-axis {
             line { stroke-width: 0.5px; stroke:#608cbd; }
-            text { font-weight:300; font-size: 1.0rem; fill:#608cbd; text-anchor:start; dominant-baseline:middle;}
+            text { font-weight:300; font-size: 0.9rem; fill:#608cbd; } 
+            text { text-anchor:start; dominant-baseline:middle; }
+            text.right-y-axis-legend { text-anchor:end; dominant-baseline:hanging; }
         }
-    }
+        text.line-legend {
+            text { font-weight:300; font-size: 1.0rem; fill:black; text-anchor:middle; dominant-baseline:auto;}
+        }
+   }
     
     .chart-title {
       font-weight: 400;
@@ -45,6 +59,7 @@
     .chart-header {
       font-weight: 300;
       font-size: 1.0rem;
+      margin-bottom:24px;
     }
     .chart-header .big-num {
       font-weight: 600;
