making sure that accordion titles are left aigned (ccg-1822)

--- a/src/css/_accordion.scss
+++ b/src/css/_accordion.scss
@@ -49,6 +49,7 @@ cagov-accordion .collapsed {
     font-size: 1.2rem !important;
     font-weight: 700;
     color: $darkblue;
+    text-align: left !important;
   }
 }
 
