--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -54,7 +54,7 @@ formatNumber(tags,1)-%}
 			<div class="hero-wrap">
 				<div class="hero-text" role="region" aria-labelledby="hero-text">
 					<div class="hero-text-align">				
-						<h1 class="hero-headline m-0 pb-3">{{varHeroTitle}}</h1>
+						<h1 class="hero-headline m-0 pb-3" id="hero-text">{{varHeroTitle}}</h1>
 						<h2 class="hero-subhead m-0 pt-2 pb-3">{{ varHeroP2 }}</h2>
 						
 						<a href="{{ "vaccines/" | toTranslatedPath(tags) }}" class="link-arrow-orange justify-content-start">
