add staging component for testing new airtable workflow for reopening data

--- a/pages/_includes/footer.njk
+++ b/pages/_includes/footer.njk
@@ -134,6 +134,10 @@ ga('tracker3.send', 'pageview');
 	{{ macros.includeJavascriptByEnv('roadmap', env.dev) }}
 {% endpagesection -%}
 
+{%- pagesection page, "safer-economy-industry-guidance" %}
+	{{ macros.includeJavascriptByEnv('roadmap-airtable-v1', env.dev) }}
+{% endpagesection -%}
+
 {%- pagesection page, "v1-state-dashboard" %}
 	{{ macros.includeJavascriptByEnv('dashboard-v1', env.dev) }}
 {% endpagesection -%}
