--- a/src/css/_reopening.scss
+++ b/src/css/_reopening.scss
@@ -24,7 +24,8 @@ html[dir=rtl] {
   }
 }
 
-cagov-reopening {
+cagov-reopening,
+cagov-reopening-airtable {
   .subtitle-color {
     color: #1f2574;
   }
