--- a/src/js/dashboard-v2/charts/common/chart.scss
+++ b/src/js/dashboard-v2/charts/common/chart.scss
@@ -71,6 +71,43 @@
       font-size: 1.0rem;
       color: #103083;
     }
+    table.tooltip-content {
+        font-weight: 400;
+        font-size: 0.75rem;
+        color:black;
+        tr td:first-child + td {
+            font-weight: 400;
+        }
+        tr td:first-child {
+            font-weight: 300;
+            width:50%;
+        }
+    }
+
+    .tooltip-container {
+        position: absolute;
+        z-index: 10;
+        visibility: hidden;
+        background: #fff;
+        width:300px;
+      }
+      
+    .tooltip-container {
+        // position: absolute;
+        // z-index: 10;
+        // visibility: hidden;
+        // background: #fff;
+        pointer-events: none;
+    
+        /* padding: 10px; */
+        padding: 1rem 2rem;
+        box-shadow: 0px 0px 5px 2px rgba(0,0,0,.14);
+        /* box-shadow: -12px 11px 5px -4px rgba(0, 0, 0, 0.4); */
+        border: none;
+        font-size: 0.75rem;
+      }
+    
+
 }
 .d-hide {
   display:none;
