--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -27,6 +27,7 @@ formatNumber(tags,1)-%}
 {%-set _varCasesTrendClassD_ = '' if _varCasesTrend_ < 0 else "d-none" %} 
 {%-set _varDeathsTrendClassD_='' if _varDeathsTrend_ < 0 else "d-none" %} 
 {%-set _varPositivityTrendClassD_='' if _varPositivityTrend_ < 0 else "d-none" %} 
+{%- set translatedLabels = pubData[language.id].homepageLabels.Table1[0] -%}
 
 {% extends "layout.njk" %}
 {% import "macros.njk" as macros %}
@@ -54,11 +55,11 @@ formatNumber(tags,1)-%}
 			<div class="hero-wrap">
 				<div class="hero-text" role="region" aria-labelledby="hero-text">
 					<div class="hero-text-align">				
-						<h1 class="hero-headline m-0 pb-3" id="hero-text">{{varHeroTitle}}</h1>
-						<h2 class="hero-subhead m-0 pt-2 pb-3">{{ varHeroP2 }}</h2>
+						<h1 class="hero-headline m-0 pb-3" id="hero-text">{{translatedLabels.varHeroTitle}}</h1>
+						<h2 class="hero-subhead m-0 pt-2 pb-3">{{ translatedLabels.varHeroP2 }}</h2>
 						
 						<a href="{{ "vaccines/" | toTranslatedPath(tags) }}" class="link-arrow-orange justify-content-start">
-							<div class="link-arrow-label">{{ varHeroP1 }}</div>
+							<div class="link-arrow-label">{{ translatedLabels.varHeroP1 }}</div>
 							<cagov-arrow></cagov-arrow>
 						</a>
 						
@@ -66,7 +67,7 @@ formatNumber(tags,1)-%}
 					</div>
 				</div>
 				<div class="hero-stats" role="region" aria-labelledby="tracking-covid">
-					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">{{varStatsHeader}}</h2>
+					<h2 class="color-orange text-center m-0 pb-2 pt-3" id="tracking-covid">{{translatedLabels.varStatsHeader}}</h2>
 					<div class="text-sm text-center text-300">
 						{{- varUpdateText | replace("[UpdatedDate]", (dailyStatsV2.data.cases.DATE + "T17:00:00Z") | formatDate2(true,tags,+1)) | replace("[DataDate]",dailyStatsV2.data.cases.DATE | formatDate2(false,tags)) -}}
 					</div>
@@ -77,10 +78,10 @@ formatNumber(tags,1)-%}
 					<div class="row d-flex justify-content-md-center">
 						<div class="col-md-6 px-10px">
 							<div class="bg-blue bd-rounded-10 py-2 px-3 text-center mt-3 summary-box">
-							<div class="h5 text-uppercase color-white line-height-1-2 mt-1">{{ varTotalCases }}</div>
+							<div class="h5 text-uppercase color-white line-height-1-2 mt-1">{{ translatedLabels.varTotalCases }}</div>
 							
-								<div id="total-cases-number" class="text-white font-size-1-2em my-2">{{_varStatTotalCases_}} <span class="text-300">total</span></div>
-								<div id="total-cases-today" class="text-white font-size-1-2em mt-2"><strong>{{_varStatTotalCasesToday_}}</strong> <span class="text-300">today</span></div>
+								<div id="total-cases-number" class="text-white font-size-1-2em my-2">{{_varStatTotalCases_}} <span class="text-300">{{translatedLabels.varTotal}}</span></div>
+								<div id="total-cases-today" class="text-white font-size-1-2em mt-2"><strong>{{_varStatTotalCasesToday_}}</strong> <span class="text-300">{{translatedLabels.varToday}}</span></div>
 								<div id="total-cases-increase" class="text-white text-xs line-height-1-5 my-2">
 								<span class="chart-arrow" arria-hidden="true">
 								    <svg class="{{ _varCasesTrendClassU_ }}" version="1.1" id="arrow-up1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">
@@ -104,10 +105,10 @@ formatNumber(tags,1)-%}
 						</div>
 						<div class="col-md-6 px-10px">
 							<div class="bg-blue bd-rounded-10 py-2 px-3 text-center mt-3 summary-box">
-							<div class="h5 text-uppercase color-white line-height-1-2 mt-1">{{ varTotalDeaths }}</div>
+							<div class="h5 text-uppercase color-white line-height-1-2 mt-1">{{ translatedLabels.varTotalDeaths }}</div>
 							
-								<div id="total-deaths-number" class="text-white font-size-1-2em my-2">{{_varStatTotalDeaths_}} <span class="text-300">total</span></div>
-								<div id="total-deaths-today" class="text-white font-size-1-2em mt-2"><strong>{{_varStatTotalDeathsToday_}}</strong> <span class="text-300">today</span></div>
+								<div id="total-deaths-number" class="text-white font-size-1-2em my-2">{{_varStatTotalDeaths_}} <span class="text-300">{{translatedLabels.varTotal}}</span></div>
+								<div id="total-deaths-today" class="text-white font-size-1-2em mt-2"><strong>{{_varStatTotalDeathsToday_}}</strong> <span class="text-300">{{translatedLabels.varToday}}</span></div>
 								<div id="total-deaths-increase" class="text-white text-xs line-height-1-5 my-2">
 								<span class="chart-arrow" arria-hidden="true">
 								    <svg class="{{ _varDeathsTrendClassU_ }}" version="1.1" id="arrow-up2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">
@@ -133,8 +134,8 @@ formatNumber(tags,1)-%}
 							<div class="bg-blue bd-rounded-10 py-2 px-3 text-center mt-3 summary-box">
 							<div class="h5 text-uppercase color-white line-height-1-2 mt-1">{{ varTestsReported }}</div>
 							
-								<div id="total-tested-number" class="text-white font-size-1-2em my-2">{{_varStatTested_}}  <span class="text-300">total</span></div>
-								<div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>{{_varStatTestedDaily_}}</strong> <span class="text-300">today</span></div>
+								<div id="total-tested-number" class="text-white font-size-1-2em my-2">{{_varStatTested_}}  <span class="text-300">{{translatedLabels.varTotal}}</span></div>
+								<div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>{{_varStatTestedDaily_}}</strong> <span class="text-300">{{translatedLabels.varToday}}</span></div>
 								<div id="total-tested-increase" class="text-white text-xs line-height-1-5 my-2">
 								<span class="chart-arrow" arria-hidden="true">
 								    <svg class="{{ _varPositivityTrendClassU_ }}" version="1.1" id="arrow-up3" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 29 29" style="enable-background:new 0 0 29 29;" xml:space="preserve">
@@ -159,7 +160,7 @@ formatNumber(tags,1)-%}
 						<div class="col-md-6 px-10px">
 							<div class="bg-blue bd-rounded-10 py-2 px-3 text-center mt-3 summary-box">
 							<div class="h5 text-uppercase color-white line-height-1-2 mt-1">Vaccines Administered</div>
-								<div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>{{_varStatVaccines_}}</strong> <span class="text-300">total</span></div>
+								<div id="total-vaccines-number" class="text-white font-size-1-2em my-4"><strong>{{_varStatVaccines_}}</strong> <span class="text-300">{{translatedLabels.varTotal}}</span></div>
 							</div>
 						</div>
 					</div>
@@ -182,7 +183,7 @@ formatNumber(tags,1)-%}
 	 M15.48,4.93V21.9h-4.63V4.93C10.85,4.93,15.48,4.93,15.48,4.93z M9.31,14.36v7.54H4.68v-7.54C4.68,14.36,9.31,14.36,9.31,14.36z"/>
 </svg>
 </span> 
-						<span class="underline"> {{varStateSummary}}</span></a>
+						<span class="underline"> {{translatedLabels.varStateSummary}}</span></a>
 
 
 						<a class="hero-stats-footer-link mt-2" href="/vaccines/#California-vaccines-dashboard">
@@ -195,7 +196,7 @@ formatNumber(tags,1)-%}
 	 M15.48,4.93V21.9h-4.63V4.93C10.85,4.93,15.48,4.93,15.48,4.93z M9.31,14.36v7.54H4.68v-7.54C4.68,14.36,9.31,14.36,9.31,14.36z"/>
 </svg>
 </span> 
-						<span class="underline"> <span class="underline">{{varVaccination}}</span></a>
+						<span class="underline"> <span class="underline">{{translatedLabels.varVaccination}}</span></a>
 
 						<a class="hero-stats-footer-link mt-2" href="/equity/"><span class="no-underline" aria-hidden="true">
 						<svg class="chart-icon" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -203,7 +204,7 @@ formatNumber(tags,1)-%}
 <path class="chart-icon-path" d="M3.14,0.31C2.29,0.31,1.6,1,1.6,1.85v21.59c0,0.85,0.69,1.54,1.54,1.54h20.05c0.85,0,1.54-0.69,1.54-1.54V1.85
 	c0-0.85-0.69-1.54-1.54-1.54C23.19,0.31,3.14,0.31,3.14,0.31z M21.65,8.7v13.2h-4.63V8.7C17.02,8.7,21.65,8.7,21.65,8.7z
 	 M15.48,4.93V21.9h-4.63V4.93C10.85,4.93,15.48,4.93,15.48,4.93z M9.31,14.36v7.54H4.68v-7.54C4.68,14.36,9.31,14.36,9.31,14.36z"/>
-						</span> <span class="underline">{{varHealthEquity}}</span></a>
+						</span> <span class="underline">{{translatedLabels.varHealthEquity}}</span></a>
 						
 					</div>
 				</div>
@@ -223,7 +224,7 @@ formatNumber(tags,1)-%}
 
 					<div class="hero-alert-social">
 						<div class="hero-alert-social-align">
-							<h3 class="color-purple m-0 pt-2 pb-3">{{varHeroAlertSocial}}</h3>
+							<h3 class="color-purple m-0 pt-2 pb-3">{{translatedLabels.varHeroAlertSocial}}</h3>
 							<nav class="social" role="navigation" aria-label="California Governor on on Social Media">
 								<a class="social-link" href="https://www.facebook.com/CAgovernor" title="California Governor on Facebook"><svg class="social-icon" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512"><title>California Governor on Facebook</title><path d="M304 96h80V0h-80c-61.757 0-112 50.243-112 112v48h-64v96h64v256h96V256h80l16-96h-96v-48c0-8.673 7.327-16 16-16z"></path></svg></a>
 								<a class="social-link" href="https://twitter.com/CAgovernor" title="California Governor on Twitter"><svg class="social-icon" xmlns="http://www.w3.org/2000/svg" width="512" height="512" viewBox="0 0 512 512"><title>California Governor on Twitter</title><path d="M512 113.2c-18.8 8.4-39.1 14-60.3 16.5 21.7-13 38.3-33.6 46.2-58.1-20.3 12-42.8 20.8-66.7 25.5C412 76.7 384.7 64 354.5 64c-58 0-105 47-105 105 0 8.2.9 16.2 2.7 23.9-87.3-4.4-164.7-46.2-216.5-109.8-9 15.5-14.2 33.6-14.2 52.8 0 36.4 18.5 68.6 46.7 87.4-17.2-.5-33.4-5.3-47.6-13.1v1.3c0 50.9 36.2 93.4 84.3 103-8.8 2.4-18.1 3.7-27.7 3.7-6.8 0-13.3-.7-19.8-1.9 13.4 41.7 52.2 72.1 98.1 73-36 28.2-81.2 45-130.5 45-8.5 0-16.8-.5-25.1-1.5C46.5 462.7 101.7 480 161 480c193.2 0 298.9-160.1 298.9-298.9 0-4.6-.1-9.1-.3-13.6 20.5-14.7 38.3-33.2 52.4-54.3z"></path></svg></a>
@@ -251,7 +252,7 @@ formatNumber(tags,1)-%}
 	<faq-section>
 		<section class="faq-twitter" role="region" aria-labelledby="want-to-know">
 			
-			<h2 class="text-center color-orange mt-0" id="want-to-know">{{varPeopleWantToKnowTitle}}</h2>
+			<h2 class="text-center color-orange mt-0" id="want-to-know">{{translatedLabels.varPeopleWantToKnowTitle}}</h2>
 			<div class="faq-twitter-wrap">
 				{%- for column, items in pubData[language.id].peopleWantToKnow %}
 					<div class="faq trigger">
@@ -277,7 +278,7 @@ formatNumber(tags,1)-%}
 <!-- FOR BUSINESSES SECTION -->
 <learn-more-section>
 <section class="faq-twitter">
-	<h2 class="text-center color-purple mt-0">For businesses</h2>
+	<h2 class="text-center color-purple mt-0">{{translatedLabels.varForBusinesses}}</h2>
 	<div class="faq-twitter-wrap">
 	{% set JSONgovraw %}{% include "../wordpress-posts/common-page-labels.json" %}{% endset %}
 		{% set JSONgov = JSONgovraw | jsonparse %}
