--- a/pages/_includes/footer.njk
+++ b/pages/_includes/footer.njk
@@ -141,6 +141,10 @@ ga('tracker3.send', 'pageview');
 	<script type="module" src="https://d3js.org/d3.v6.min.js"></script><!-- had some trouble importing this, error circular dependencies after npm install so including here -->
 	{{ macros.includeJavascriptByEnv('dashboard-v2', env.dev) }}
 {% endpagesection -%}
+{%- pagesection page, "v3-state-dashboard" %}
+	<script type="module" src="https://d3js.org/d3.v6.min.js"></script><!-- had some trouble importing this, error circular dependencies after npm install so including here -->
+	{{ macros.includeJavascriptByEnv('dashboard-v3', env.dev) }}
+{% endpagesection -%}
 
 {%- pagesection page, "equity" %}
 	<script type="module" src="https://d3js.org/d3.v6.min.js"></script><!-- had some trouble importing this, error circular dependencies after npm install so including here -->
