--- a/pages/_includes/main.njk
+++ b/pages/_includes/main.njk
@@ -132,7 +132,7 @@ formatNumber(tags,1)-%}
 						</div>
 						<div class="col-md-6 px-10px">
 							<div class="bg-blue bd-rounded-10 py-2 px-3 text-center mt-3 summary-box">
-							<div class="h5 text-uppercase color-white line-height-1-2 mt-1">{{ varTestsReported }}</div>
+							<div class="h5 text-uppercase color-white line-height-1-2 mt-1">{{ translatedLabels.varTestsReported }}</div>
 							
 								<div id="total-tested-number" class="text-white font-size-1-2em my-2">{{_varStatTested_}}  <span class="text-300">{{translatedLabels.varTotal}}</span></div>
 								<div id="total-tested-today" class="text-white font-size-1-2em mt-2"><strong>{{_varStatTestedDaily_}}</strong> <span class="text-300">{{translatedLabels.varToday}}</span></div>
