--- a/src/css/_accordion.scss
+++ b/src/css/_accordion.scss
@@ -167,3 +167,12 @@ button.card-header {
 
   }
 }
+
+
+// Fist sibling inside of dark container
+.bg-darkblue .dark-accordion-bg > .container.dark-accordion-first {
+  padding-top: 0;
+  margin-top: 0;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
