added 1rem safety padding to the dark accordion first item

--- a/src/css/_accordion.scss
+++ b/src/css/_accordion.scss
@@ -171,7 +171,7 @@ button.card-header {
 
 // Fist sibling inside of dark container
 .bg-darkblue .dark-accordion-bg > .container.dark-accordion-first {
-  padding-top: 0;
+  padding-top: 1rem;
   margin-top: 0;
   padding-bottom: 0;
   margin-bottom: 0;
