--- a/pages/_includes/footer.njk
+++ b/pages/_includes/footer.njk
@@ -160,6 +160,11 @@ ga('tracker3.send', 'pageview');
 	{{ macros.includeJavascriptByEnv('vaccines', env.dev) }}
 {% endpagesection -%}
 
+{%- pagesection page, "vaccination-progress-data" %}
+	<script type="module" src="https://d3js.org/d3.v6.min.js"></script><!-- had some trouble importing this, error circular dependencies after npm install so including here -->
+	{{ macros.includeJavascriptByEnv('vaccines', env.dev) }}
+{% endpagesection -%}
+
 {%- pagesection page, "charts-sandbox" %}
 	<script type="module" src="https://d3js.org/d3.v6.min.js"></script><!-- had some trouble importing this, error circular dependencies after npm install so including here -->
 	{{ macros.includeJavascriptByEnv('charts-sandbox', env.dev) }}
