applied styles to the native WP separator (ccg-1863)

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -1584,6 +1584,15 @@ li.active ul.nav.bd-sidenav {
   display: block;
 }
 
+/* Wordpress Separator */
+.wp-block-separator {
+  width: 100vw;
+  margin-left: calc(50% - 50vw);
+  border-top: 1px solid $black;
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
 /*----- from State Holidays Page -----*/
 
 .display-4,
