--- a/src/js/dashboard-v3/charts/common/histogram.scss
+++ b/src/js/dashboard-v3/charts/common/histogram.scss
@@ -1,6 +1,6 @@
 
 
-.chart-histogram {
+.chart {
     // .bar-label .tick text {
     //   text-transform: capitalize;
     // }
@@ -67,8 +67,7 @@
             fill:black;
             opacity:0.5;
         }
-   }
-    
+    }
     .chart-title {
       font-weight: 300;
       font-size: 1.2rem;
@@ -129,6 +128,11 @@
         border: none;
       }
     
+    a.dlbutton {
+        border-radius:3px;
+        background-color:aqua;
+        color:blue; font-weight:300; font-size: 0.5rem; }
+    }
 
 }
 .d-hide {
