Trying to fix white space by unsetting the height and width and giving .sr-only class text-indent property (ccg-1892) instead

--- a/src/css/_general.scss
+++ b/src/css/_general.scss
@@ -2424,3 +2424,9 @@ font {
   }
 }
 
+/* Fixing White space */
+.sr-only {
+  text-indent: -10000px;
+  height: unset !important;
+  width: unset !important;
+}
