missing prefix on h2 variable in news section

--- a/pages/_includes/news-feed-home.html
+++ b/pages/_includes/news-feed-home.html
@@ -2,7 +2,7 @@
   <section class="news trigger" role="region" aria-label="Latest news">
     <div class="news-wrap">
     
-      <h2 class="color-purple mt-0 mb-3">{{varLatestNews}}</h2>
+      <h2 class="color-purple mt-0 mb-3">{{translatedLabels.varLatestNews}}</h2>
       <div class="news-grid">
         {%- for i in range(0, 3) %}
           <article class="news-item trigger">
